syntax = "proto3";

import "google/protobuf/any.proto";
import "sp/DacPlayer.proto";

package com.spotify.home.dac.component.v1.proto;

option java_multiple_files = true;
option java_package = "com.spotify.home.dac.component.v1.proto";

message AlbumCardActionsSmallComponent {
  string title = 1;
  string subtitle = 2;
  string navigateUri = 3;
  string likeUri = 4;
  string imageUri = 5;
  com.spotify.dac.player.v1.proto.PlayCommand playCommand = 6;
}

message ArtistCardActionsSmallComponent {
  string title = 1;
  string subtitle = 2;
  string navigateUri = 3;
  string followUri = 4;
  string imageUri = 5;
  com.spotify.dac.player.v1.proto.PlayCommand playCommand = 6;
}

message PlaylistCardActionsSmallComponent {
  string title = 1;
  string subtitle = 2;
  string navigateUri = 3;
  string likeUri = 4;
  string imageUri = 5;
  com.spotify.dac.player.v1.proto.PlayCommand playCommand = 6;
}
